--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -26,6 +26,18 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root" class="root"></div>
+    <script type="text/javascript">
+      // window.onerror = function(errorMessage, scriptURI, lineNo, columnNo, error) {
+      //   console.log('errorMessage: ' + errorMessage); // 异常信息
+      //   console.log('scriptURI: ' + scriptURI); // 异常文件路径
+      //   console.log('lineNo: ' + lineNo); // 异常行号
+      //   console.log('columnNo: ' + columnNo); // 异常列号
+      //   console.log('error: ' + error); // 异常堆栈信息
+      //   // ...
+      //   // 异常上报
+      // };
+      // throw new Error('这是一个错误');
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
